[package]
name = "huffcomp"
version = "0.1.23"
authors = ["Alejandro Ríos Jasso <jassoalex97@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Huffman coding program for compression and decompression of text files"
readme = "README.md"
homepage = "https://github.com/AlexRiosJ/huffcomp"
repository = "https://github.com/AlexRiosJ/huffcomp"
keywords = ["huffman", "compression", "decompression"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
bincode = "1.3.1"
